--- a/build.gradle
+++ b/build.gradle
@@ -8,9 +8,6 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:4.0.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
@@ -18,6 +15,10 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven {
+            // Maven repository for Persona Android SDK
+            url 'https://sdk.withpersona.com/android/releases'
+        }
     }
 }
 
