Remove JCenter dependency
JFrog is pulling the plug on JCenter.
https://jfrog.com/blog/into-the-sunset-bintray-jcenter-gocenter-and-chartcenter/

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,15 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
+repositories {
+    maven {
+        // Maven repository for Persona Android SDK
+        url 'https://sdk.withpersona.com/android/releases'
+    }
+}
+
 android {
     compileSdkVersion 30
-    buildToolsVersion "30.0.2"
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
