--- a/build.gradle
+++ b/build.gradle
@@ -2,22 +2,18 @@
 buildscript {
     repositories {
         google()
-        jcenter()
+        maven { url 'https://plugins.gradle.org/m2/' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.2'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.21"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.30"
     }
 }
 
 allprojects {
     repositories {
         google()
-        jcenter()
-        maven {
-            // Maven repository for Persona Android SDK
-            url 'https://sdk.withpersona.com/android/releases'
-        }
+        mavenCentral()
     }
 }
 
