--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,9 +39,10 @@ android {
 }
 
 dependencies {
-    implementation 'com.withpersona.sdk:inquiry:1.1.8'
+    implementation 'com.withpersona.sdk:inquiry:2.0.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
