--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,12 +9,7 @@ repositories {
 }
 
 android {
-    compileSdkVersion 31
-
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
+    compileSdk 31
 
     buildFeatures {
         viewBinding true
@@ -22,8 +17,8 @@ android {
 
     defaultConfig {
         applicationId "com.withpersona.sdk.demo"
-        minSdkVersion 21
-        targetSdkVersion 31
+        minSdk 21
+        targetSdk 31
         versionCode 1
         versionName "1.0"
 
@@ -39,11 +34,10 @@ android {
 }
 
 dependencies {
-    implementation 'com.withpersona.sdk:inquiry:2.0.1'
+    implementation 'com.withpersona.sdk:inquiry:2.0.3'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib"
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
