--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ repositories {
 }
 
 android {
-    namespace 'com.withpersona.sdk.demo'
+    namespace 'com.withpersona.sdk2.demo'
     compileSdk 31
 
     buildFeatures {
@@ -19,7 +19,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.withpersona.sdk.demo"
+        applicationId "com.withpersona.sdk2.demo"
         minSdk 21
         targetSdk 31
         versionCode 1
@@ -37,10 +37,10 @@ android {
 }
 
 dependencies {
-    implementation 'com.withpersona.sdk:inquiry:2.1.1'
-    implementation 'androidx.appcompat:appcompat:1.4.0'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
+    implementation 'com.withpersona.sdk2:inquiry:2.1.4'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
