--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,7 @@
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
+plugins {
+    id('com.android.application')
+    id('kotlin-android')
+}
 
 repositories {
     maven {
@@ -39,10 +41,9 @@ android {
 }
 
 dependencies {
-    implementation 'com.withpersona.sdk:inquiry:1.1.8'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib"
+    implementation 'com.withpersona.sdk:inquiry:1.1.18'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
