--- a/.gitignore
+++ b/.gitignore
@@ -49,7 +49,9 @@ captures/
 .idea/modules.xml
 # Comment next line if keeping position of elements in Navigation Editor is relevant for you
 .idea/navEditor.xml
-.idea
+.idea/*
+!.idea/icon.png
+!.idea/icon_dark.png
 
 # Keystore files
 # Uncomment the following lines if you do not want to check your keystore files in.
@@ -84,3 +86,6 @@ lint/generated/
 lint/outputs/
 lint/tmp/
 # lint/reports/
+
+# MacOS
+.DS_Store
